--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,9 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textAllCaps">false</item>
+        <item name="materialAlertDialogTheme">@style/CustomMaterialAlertDialog</item>
     </style>
 
-    <style name="SplashTheme" parent ="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="SplashTheme" parent ="Theme.Material3.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
@@ -25,4 +26,27 @@
     <style name="AppTheme.ProgressBar">
         <item name="colorAccent">@color/purple_200</item>
     </style>
+
+    <style name="CustomMaterialAlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="buttonBarPositiveButtonStyle">@style/CustomMaterialAlertDialogButton</item>
+        <item name="buttonBarNegativeButtonStyle">@style/CustomMaterialAlertDialogButton</item>
+        <item name="buttonBarNeutralButtonStyle">@style/CustomMaterialAlertDialogButton</item>
+    </style>
+
+    <style name="CustomMaterialAlertDialogButton" parent="@style/CustomMaterialAlertDialogButton2">
+        <item name="textAllCaps">true</item>
+    </style>
+
+    <style name="CustomMaterialAlertDialogButton2" parent="Widget.Material3.Button">
+        <item name="textAllCaps">true</item>
+        <item name="android:minHeight">1dp</item>
+        <item name="android:minWidth">10dp</item>
+        <item name="android:textSize">@dimen/abc_text_size_small_material</item>
+        <item name="android:fontFamily">@font/roboto</item>
+    </style>
+
+    <style name="CustomMaterialAlertDialogText2" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:fontFamily">@font/roboto</item>
+    </style>
+
 </resources>
