--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,19 +28,18 @@
     </style>
 
     <style name="CustomMaterialAlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog">
-        <item name="buttonBarPositiveButtonStyle">@style/CustomMaterialAlertDialogButton</item>
-        <item name="buttonBarNegativeButtonStyle">@style/CustomMaterialAlertDialogButton</item>
-        <item name="buttonBarNeutralButtonStyle">@style/CustomMaterialAlertDialogButton</item>
+        <item name="buttonBarPositiveButtonStyle">@style/CustomMaterialAlertDialogPositiveButton2</item>
+        <item name="buttonBarNegativeButtonStyle">@style/CustomMaterialAlertDialogButton2</item>
+        <item name="buttonBarNeutralButtonStyle">@style/CustomMaterialAlertDialogButton2</item>
     </style>
-
-    <style name="CustomMaterialAlertDialogButton" parent="@style/CustomMaterialAlertDialogButton2">
-        <item name="textAllCaps">true</item>
+    <style name="CustomMaterialAlertDialogPositiveButton2" parent="@style/CustomMaterialAlertDialogButton2">
+        <item name="android:layout_marginLeft">4dp</item>
     </style>
     
     <style name="CustomMaterialAlertDialogButton2" parent="Widget.Material3.Button">
         <item name="textAllCaps">true</item>
         <item name="android:minHeight">1dp</item>
-        <item name="android:minWidth">10dp</item>
+        <item name="android:minWidth">1dp</item>
         <item name="android:textSize">@dimen/abc_text_size_small_material</item>
         <item name="android:fontFamily">@font/roboto</item>
     </style>
