--- a/app/src/main/res/values/styleable.xml
+++ b/app/src/main/res/values/styleable.xml
@@ -2,6 +2,8 @@
 <resources>
     <declare-styleable name="UspCustomView">
         <attr name="icon" format="reference"/>
+        <attr name="icon_width" format="dimension"/>
+        <attr name="icon_height" format="dimension"/>
         <attr name="caption_text" format="string"/>
     </declare-styleable>
 </resources>
