--- a/app/src/main/res/layout/usp_custom_view.xml
+++ b/app/src/main/res/layout/usp_custom_view.xml
@@ -24,11 +24,11 @@
 
         <TextView
             android:id="@+id/textView"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textSize="13sp"
-            android:lineSpacingExtra="7sp"
+            android:textColor="@color/black"
             android:textAlignment="center"
             android:text="@string/image_caption" />
     </LinearLayout>
