--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,8 @@
 
     <color name="splash_background">#ffffff</color>
     <color name="colorRootLayout">#ffffff</color>
+    <color name="bgView">#3F51B5</color>
     <color name="colorHeaderIDontKonwPump">#f5f5f5</color>
-    <color name="colorSearchBar">#e5e5e7</color>
+    <color name="colorSearchBar">#9C27B0</color>
     <color name="dont_know_pump_item_separator">#c5c6c8</color>
 </resources>
