--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="materialAlertDialogTheme">@style/CustomMaterialAlertDialog</item>
         <item name="uspCustomViewStyle">@style/UspCustomViewDefaultStyle</item>
+        <item name="searchViewStyle">@style/Widget.App.SearchView</item>
     </style>
 
     <style name="AppTheme" parent="AppThemeBase">
@@ -65,4 +66,17 @@
         <item name="icon_height">@dimen/usp_icon_height</item>
     </style>
 
+    <style name="Widget.App.SearchView" parent="Widget.AppCompat.Light.SearchView">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.SearchView</item>
+    </style>
+
+    <style name="ThemeOverlay.App.SearchView" parent="">
+        <item name="colorSecondary">@color/white</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+<!--        <item name="android:textColor">@android:color/white</item>-->
+        <item name="android:background">@color/colorSearchBar</item>
+        <!-- The hint text that appears when the user has not typed anything -->
+        <item name="android:queryHint">@string/search</item>
+    </style>
 </resources>
